# ========================================================================
# Python Project Configuration (PEP 621 compliant)
# ========================================================================
#
# This file defines the complete Python project configuration including:
# - Project metadata and dependencies
# - Development dependencies and tools
# - Build system requirements
#
# This configuration is compatible with Poetry, pip-tools, and other
# modern Python package managers.
#
# ========================================================================

[tool.poetry]
# Project Identity
name = "keyfory-python-user-manage"
version = "0.1.0"
description = "REST API for user management with event-driven architecture"
authors = ["Igor Davydenkov <igor@example.com>"]
readme = "README.md"

# Package Discovery
# Specifies which directories contain Python packages
packages = [{include = "app"}]

# Python Version Requirements
# Requires Python 3.12 or higher for modern async features and performance
python = ">=3.12,<4.0"

# License Information (optional but recommended)
license = "MIT"

# Repository Information (optional)
repository = "https://github.com/username/keyfory-python-user-manage"
homepage = "https://github.com/username/keyfory-python-user-manage"
documentation = "https://github.com/username/keyfory-python-user-manage#readme"

# Keywords for package discovery
keywords = ["api", "rest", "user-management", "fastapi", "litestar", "rabbitmq"]

# Classifiers for PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",  # Compatible with LiteStar
]

# ========================================================================
# DEPENDENCIES
# ========================================================================

[tool.poetry.dependencies]
# Core Python
python = "^3.12"

# Configuration Management
python-dotenv = "^1"                      # Environment variable loading
pydantic = "^2.0"                         # Data validation and serialization
pydantic-settings = "^2.0"                # Settings management

# Web Framework - LiteStar (high-performance async framework)
litestar = {extras = ["standard"], version = "^2"}  # Core framework with standard features
litestar-granian = "^0"                   # High-performance ASGI server
litestar-asyncpg = "^0"                   # PostgreSQL async driver integration

# Database - Advanced SQLAlchemy
advanced-alchemy = "^0.20"               # Modern async SQLAlchemy wrapper

# Serialization - Ultra-fast msgpack/json
msgspec = "^0.18.6"                      # Fast serialization for APIs

# Logging - Structured logging
structlog = "^24"                        # Structured JSON logging

# Message Queue - RabbitMQ
aio-pika = "^9.5.4"                      # Async RabbitMQ client
faststream = {extras = ["cli"], version = "^0.5.34"}  # Stream processing framework

# ========================================================================
# DEVELOPMENT DEPENDENCIES
# ========================================================================

[tool.poetry.group.dev.dependencies]
# Testing Framework
pytest = "^8.0.0"                        # Core testing framework
pytest-asyncio = "^0.23.0"               # Async test support

# Code Quality (optional but recommended for development)
# black = "^24.0.0"                      # Code formatting
# isort = "^5.0.0"                       # Import sorting
# flake8 = "^7.0.0"                      # Linting
# mypy = "^1.0.0"                        # Type checking
# pre-commit = "^3.0.0"                  # Git hooks

# ========================================================================
# BUILD SYSTEM
# ========================================================================

[build-system]
# Modern Python build system using Poetry
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ========================================================================
# DEVELOPMENT TOOLING CONFIGURATION
# ========================================================================

# Black Code Formatting
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort Import Sorting
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest Configuration is in pytest.ini
# Coverage Configuration is in pytest.ini

# ========================================================================
# PRODUCTION DEPLOYMENT NOTES
# ========================================================================
#
# 1. Dependency Management:
#    - Use poetry export for requirements.txt: poetry export -f requirements.txt --output requirements.txt
#    - Pin exact versions for production: poetry export --with dev -f requirements.txt --output requirements-dev.txt
#
# 2. Security:
#    - Regularly update dependencies: poetry update
#    - Check for vulnerabilities: poetry audit
#    - Use virtual environments in production
#
# 3. CI/CD:
#    - Use GitHub Actions or similar for automated testing
#    - Include security scanning in CI pipeline
#    - Automate dependency updates with Dependabot
#
# ========================================================================
